--- a/style.css
+++ b/style.css
@@ -1,35 +1,3 @@
-/*
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Red: hsl(0, 100%, 74%) 
-- Green: hsl(154, 59%, 51%)
-
-### Accent
-
-- Blue: hsl(248, 32%, 49%)
-
-### Neutral
-
-- Dark Blue: hsl(249, 10%, 26%) 
-- Grayish Blue: hsl(246, 25%, 77%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 16px
-
-### Font
-
-- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
-- Weights: 400, 500, 600, 700
-*/
 :root {
     --red:hsl(0, 100%, 74%) ;
     --green:hsl(154, 59%, 51%);
@@ -62,9 +30,6 @@ body{
 .left_text p {
     color: white;
 }
-/* .left_text p {
-    color: white;
-} */
 .left_text h3 {
     font-size: 2em;
     padding-right: 25%;
@@ -104,15 +69,6 @@ input {
     margin: 0 auto;
     margin-bottom: 1em;
 }
-/* .input-control{
-    margin-bottom: 1em;
-    padding: 0.5em 1em;
-    border-radius: 5px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-    border: 1px solid #ccc;
-} */
 .input-control:focus{
     border: 1px solid #555;
 }
@@ -155,5 +111,6 @@ input {
 
     .left_text h3,p {
         text-align: center;
+        padding-right:0;
     }
 }
