--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ input {
 @media screen and (max-width:700px) {
     .container_flex{
         flex-direction: column;
+        margin-bottom:2em;
     }
     .left_text,
     .right_text {
